crates/executor/src/tests/s3_tables/snapshots/show_databases.snap
---
source: crates/executor/src/tests/s3_tables/query.rs
description: query
---
Ok(
    [
        "+------------+----------+----------+---------------+-------------+",
        "| created_on | name     | kind     | database_name | schema_name |",
        "+------------+----------+----------+---------------+-------------+",
        "|            | embucket | STANDARD |               |             |",
        "+------------+----------+----------+---------------+-------------+",
    ],
)
