crates/executor/src/tests/s3_tables/snapshots/show_schemas_initial.snap
---
source: crates/executor/src/tests/s3_tables/query.rs
description: SHOW SCHEMAS IN embucket
---
Ok(
    [
        "+------------+--------------------+------+---------------+-------------+",
        "| created_on | name               | kind | database_name | schema_name |",
        "+------------+--------------------+------+---------------+-------------+",
        "|            | tests              |      | embucket      |             |",
        "|            | tests_second       |      | embucket      |             |",
        "|            | information_schema |      | embucket      |             |",
        "+------------+--------------------+------+---------------+-------------+",
    ],
)
