crates/executor/src/tests/s3_tables/snapshots/show_tables_after_drop.snap
---
source: crates/executor/src/tests/s3_tables/query.rs
description: SHOW TABLES IN embucket.tests
---
Ok(
    [
        "+------------+-------+-------+---------------+-------------+",
        "| created_on | name  | kind  | database_name | schema_name |",
        "+------------+-------+-------+---------------+-------------+",
        "|            | first | TABLE | embucket      | tests       |",
        "|            | third | TABLE | embucket      | tests       |",
        "+------------+-------+-------+---------------+-------------+",
    ],
)
